# HTTP-C2-Server

./: CMakeLists.txt  readme.md  serverMain
include/: cli.h  client.h  server.h  stegImage.h
src/: cli.cpp  client.cpp  server.cpp  serverMain.cpp  stegImage.cpp
